--- a/UI/mul.lproj/PrefsWindow.xcstrings
+++ b/UI/mul.lproj/PrefsWindow.xcstrings
@@ -13,8 +13,8 @@
         },
         "es" : {
           "stringUnit" : {
-            "state" : "needs_review",
-            "value" : "Preferencias"
+            "state" : "translated",
+            "value" : "Configuración"
           }
         }
       }
