--- a/UI/mul.lproj/ResultsWindow.xcstrings
+++ b/UI/mul.lproj/ResultsWindow.xcstrings
@@ -10,6 +10,12 @@
             "state" : "new",
             "value" : "Submit (Unknown) Items"
           }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Enviar ítems (desconocidos)"
+          }
         }
       }
     },
@@ -25,8 +31,8 @@
         },
         "es" : {
           "stringUnit" : {
-            "state" : "needs_review",
-            "value" : "resultados..."
+            "state" : "translated",
+            "value" : "Enviar Resultados..."
           }
         }
       }
@@ -40,6 +46,12 @@
             "state" : "new",
             "value" : "Results..."
           }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Resultados..."
+          }
         }
       }
     },
@@ -50,6 +62,12 @@
         "en" : {
           "stringUnit" : {
             "state" : "new",
+            "value" : "VirusTotal:"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
             "value" : "VirusTotal:"
           }
         }
@@ -67,8 +85,8 @@
         },
         "es" : {
           "stringUnit" : {
-            "state" : "needs_review",
-            "value" : "OK"
+            "state" : "translated",
+            "value" : "Cerrar"
           }
         }
       }
