UI improvements (button effects)

--- a/UI/mul.lproj/ResultsWindow.xcstrings
+++ b/UI/mul.lproj/ResultsWindow.xcstrings
@@ -14,7 +14,7 @@
         "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Enviar ítems (desconocidos)"
+            "value" : "Enviar ítems"
           }
         }
       }
