--- a/UI/mul.lproj/VTInfoWindow.xcstrings
+++ b/UI/mul.lproj/VTInfoWindow.xcstrings
@@ -68,7 +68,7 @@
         "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Nombre de Archivo:"
+            "value" : "Nombre:"
           }
         }
       }
