improved handling of ad-hoc signed items

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -26,6 +26,9 @@
         }
       }
     },
+    "Ad-hoc" : {
+      "comment" : "Ad-hoc"
+    },
     "Awaiting results..." : {
       "comment" : "Awaiting results..."
     },
