--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -188,6 +188,9 @@
         }
       }
     },
+    "ERROR:\nKnockKnock Encountered a Fatal Error" : {
+      "comment" : "KnockKnock Encountered a Fatal Error"
+    },
     "ERROR:\nVirusTotal query for '%@' failed" : {
       "comment" : "ERROR:\nVirusTotal query for '%@' failed",
       "localizations" : {
@@ -220,6 +223,9 @@
           }
         }
       }
+    },
+    "Exception: %@" : {
+      "comment" : "Exception: %@"
     },
     "extensions hosted in the browser" : {
       "comment" : "extensions hosted in the browser",
@@ -526,6 +532,7 @@
     },
     "Submissions complete, though errors were encountered (HTTP response(s): %@)." : {
       "comment" : "Submissions complete, though errors were encountered (HTTP response(s): %@).",
+      "extractionState" : "stale",
       "localizations" : {
         "es" : {
           "stringUnit" : {
@@ -534,6 +541,9 @@
           }
         }
       }
+    },
+    "Submissions complete, though errors were encountered.\r\n(HTTP response(s): %@)." : {
+      "comment" : "Submissions complete, though errors were encountered.\r\n(HTTP response(s): %@)."
     },
     "Submissions complete. (In subsequent scans item's VT detection ratios will now be displayed)." : {
       "comment" : "Submissions complete. (In subsequent scans item's VT detection ratios will now be displayed).",
@@ -644,6 +654,9 @@
           }
         }
       }
+    },
+    "VirusTotal Results: Disabled" : {
+      "comment" : "VirusTotal Results: Disabled"
     },
     "VirusTotal:\r\n %lu flagged item(s)\r\n %lu unknown item(s)" : {
       "comment" : "VirusTotal:\r\n %lu flagged item(s)\r\n %lu unknown item(s)",
